remote example data

--- a/config.yml
+++ b/config.yml
@@ -194,7 +194,7 @@ params:
   #
   # Default: false
   # BOOLEAN; `true`, `false`
-  useLogo: true
+  useLogo: false
 
   # Where is the logo located, if one is
   # present at all?
